updated the searcchScreen

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-    EXPO_PUBLIC_API_KEY= f5d0dfc2b2mshafda969ea87c0eep16cf62jsn029fa5f6844c
-EXPO_PUBLIC_BASE_URL = https://tasty.p.rapidapi.com
+EXPO_PUBLIC_API_KEY=f5d0dfc2b2mshafda969ea87c0eep16cf62jsn029fa5f6844c
+EXPO_PUBLIC_BASE_URL=https://tasty.p.rapidapi.com
